fable/test/semantic_error/calling_array.f
      program prog
      integer nums
      call nums(3)
      end
